--- a/XBB/Xqusong/Gemfile
+++ b/XBB/Xqusong/Gemfile
@@ -1,4 +1,4 @@
-source 'https://rubygems.org'
+source 'https://ruby.taobao.org'
 
 git_source(:github) do |repo_name|
   repo_name = "#{repo_name}/#{repo_name}" unless repo_name.include?("/")
@@ -8,8 +8,11 @@ end
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.2'
+
+
 # Use mysql as the database for Active Record
 gem 'mysql2', '>= 0.3.18', '< 0.5'
+
 # Use Puma as the app server
 gem 'puma', '~> 3.0'
 # Use SCSS for stylesheets
@@ -35,7 +38,6 @@ gem 'jbuilder', '~> 2.5'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
-
 gem "slim-rails"
 gem 'bootstrap-sass', '~> 3.3.6'
 gem 'simple_form'
@@ -51,11 +53,12 @@ gem 'qiniu', '~> 6.8.1'
 
 gem "select2-rails"
 gem 'rest-client'
-#gem 'acts_as_tree', github: 'amerine/acts_as_tree'
+gem 'acts_as_tree', github: 'amerine/acts_as_tree'
 
 gem 'bootstrap-editable-rails'
 
 gem 'sidekiq'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
@@ -68,7 +71,10 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+
   gem "rack-livereload"
+  gem 'guard-livereload', '~> 2.5', require: false
+  gem 'awesome_print'
 
 end
 
