--- a/XBB/Xyonghu/Gemfile
+++ b/XBB/Xyonghu/Gemfile
@@ -7,9 +7,12 @@ end
 
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '~> 5.0.1'
-# Use sqlite3 as the database for Active Record
-gem 'mysql2'
+gem 'rails', '~> 5.0.2'
+
+
+# Use mysql as the database for Active Record
+gem 'mysql2', '>= 0.3.18', '< 0.5'
+
 # Use Puma as the app server
 gem 'puma', '~> 3.0'
 # Use SCSS for stylesheets
@@ -19,7 +22,7 @@ gem 'uglifier', '>= 1.3.0'
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
 # See https://github.com/rails/execjs#readme for more supported runtimes
-# gem 'therubyracer', platforms: :ruby
+gem 'therubyracer', platforms: :ruby
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
@@ -34,16 +37,25 @@ gem 'jbuilder', '~> 2.5'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
+
 gem "slim-rails"
 gem 'bootstrap-sass', '~> 3.3.6'
 gem 'simple_form'
-gem 'will_paginate', github: 'jonatack/will_paginate'
+#gem 'will_paginate', github: 'jonatack/will_paginate'
 gem 'will_paginate-bootstrap'
 
 gem 'devise'
+gem 'rolify'
+gem 'cancancan'
+
+gem 'config'
+gem 'qiniu', '~> 6.8.1'
 
 gem "select2-rails"
 gem 'rest-client'
+gem 'acts_as_tree', github: 'amerine/acts_as_tree'
+
+gem 'bootstrap-editable-rails'
 
 gem 'sidekiq'
 
@@ -59,10 +71,11 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+
   gem "rack-livereload"
   gem 'guard-livereload', '~> 2.5', require: false
   gem 'awesome_print'
-  gem 'letter_opener'
+
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
